# local-ai-memory

./: .gitignore  CONNECTORS.md  Cargo.toml  DESIGN.md  MANUAL.md  PLAN.md  PRODUCT.md  README.md
legacy-node/: package.json
legacy-node/src/: cli.js  embeddings.js  extractors.js  paths.js  reranker.js  settings.js
legacy-node/test/: embeddings.test.js  parsers.test.js
public/: app.js  index.html  styles.css
rust/: backup.rs  chunker.rs  cli.rs  client.rs  daemon.rs  db.rs  embeddings.rs  extractors.rs  hash.rs  http.rs  indexer.rs  lib.rs  main.rs  mcp.rs  paths.rs  reranker.rs  settings.rs  tui.rs  vector_store.rs  watch_manager.rs  watcher.rs
src/: chunker.js  db.js  hash.js  http.js  indexer.js  mcp.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs  watch_service.rs
test/: chunker.test.js  ingest-search.test.js
tools/: parse_document.py
