[package]
name = "local-ai-memory"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "mem"
path = "rust/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
hex = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tiny_http = "0.12"
walkdir = "2"

[dev-dependencies]
tempfile = "3"
