[package]
name = "local-ai-memory"
version = "0.1.0"
edition = "2024"

[lib]
name = "local_ai_memory"
path = "rust/lib.rs"

[[bin]]
name = "mem"
path = "rust/main.rs"

[dependencies]
anyhow = "1"
arrow-array = "=57.3.1"
arrow-schema = "=57.3.1"
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
futures = "0.3.32"
hex = "0.4"
lancedb = "0.27.2"
notify = "8"
ratatui = "0.29"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tiny_http = "0.12"
tokio = { version = "1.52.3", features = ["rt-multi-thread"] }
walkdir = "2"

[dev-dependencies]
tempfile = "3"
