[package]
name = "local-ai-memory-desktop"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "local-ai-memory"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1"
local-ai-memory = { path = "..", default-features = false }
notify = "8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-dialog = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
